<resources>
    <string name="AccountDeActivated">Unfortunately, this account has been deactivated.</string>
    <string name="Achievements">Achievements</string>
    <string name="Add">Add</string>
    <string name="All">All</string>
    <string name="AllClients">All Clients</string>
    <string name="Assessments">Assessments</string>
    <string name="AutoMessaging">Auto Messaging</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Calories">Calories</string>
    <string name="Cancel">Cancel</string>
    <string name="Carbs">Carbs</string>
    <string name="Cardio">Cardio</string>
    <string name="Chat">Chat</string>
    <string name="Checkins">Checkins</string>
    <string name="Clients">Clients</string>
    <string name="Close">Close</string>
    <string name="Comment">Comment</string>
    <string name="Comments">Comments</string>
    <string name="Connect_MyFitnessPal">Connect MyFitnessPal</string>
    <string name="Copied">Copied</string>
    <string name="Copy">Copy</string>
    <string name="CreateACustomAssessment">Create a Custom Assessment</string>
    <string name="Current">Current</string>
    <string name="Custom">Custom</string>
    <string name="CustomAssessments">Custom Assessments</string>
    <string name="Data">Data</string>
    <string name="Date">Date</string>
    <string name="DaysLeft">Days left</string>
    <string name="DeleteAssessmentType">Delete Assessment Type</string>
    <string name="Deleted">Deleted</string>
    <string name="Diary">Diary</string>
    <string name="Dinner">Dinner</string>
    <string name="DownloadMxplayer">Download MX Player</string>
    <string name="Edit">Edit</string>
    <string name="Error">Error</string>
    <string name="Everyone">Everyone</string>
    <string name="Exercises">Exercises</string>
    <string name="Fats">Fats</string>
    <string name="Feedback">Feedback</string>
    <string name="Girth">Girth</string>
    <string name="Goal">Goal</string>
    <string name="Groups">Groups</string>
    <string name="InGroup">In Group</string>
    <string name="LastWorkout">Last workout</string>
    <string name="Like">Like</string>
    <string name="Likes">Likes</string>
    <string name="Lunch">Lunch</string>
    <string name="MFPConnectDisabled">Your MyFitnessPal connection is disabled.</string>
    <string name="MFPConnectDisabledDetails">Fix the issue and re-connect with MyFitnessPal.</string>
    <string name="MFPConnectFailed">We were unable to connect to your MyFitnessPal diary.</string>
    <string name="MFPConnectFailedDetails">Make sure your MyFitnessPal username is correct and your diary is set to public.</string>
    <string name="MarkAllDoneBtnText">{fa-check}   Mark All Completed</string>
    <string name="Meals">Meals</string>
    <string name="Mine">Mine</string>
    <string name="Month_10_short">OCT</string>
    <string name="Month_11_short">NOV</string>
    <string name="Month_12_short">DEC</string>
    <string name="Month_1_short">JAN</string>
    <string name="Month_2_short">FEB</string>
    <string name="Month_3_short">MAR</string>
    <string name="Month_4_short">APR</string>
    <string name="Month_5_short">MAY</string>
    <string name="Month_6_short">JUN</string>
    <string name="Month_7_short">JUL</string>
    <string name="Month_8_short">AUG</string>
    <string name="Month_9_short">SEP</string>
    <string name="My">My</string>
    <string name="MyClients">My Clients</string>
    <string name="NGroups">%s Groups</string>
    <string name="NNew">%s New</string>
    <string name="Name">Name</string>
    <string name="NewAssessmentType">New Assessment Type</string>
    <string name="NewClientSignup">New Client Signed Up</string>
    <string name="NewClientSignupDetail">%s %s signed up for %s. Say Hi!</string>
    <string name="NewClientSignupDetailIAP">%s %s signed up for %s (in-app). Say Hi!</string>
    <string name="NewNote">New Note</string>
    <string name="NewPost">New Post</string>
    <string name="News">News</string>
    <string name="No">No</string>
    <string name="NoUpcomingPlan">No upcoming plan</string>
    <string name="NoUpdates">No Updates</string>
    <string name="NoVideoPlayerFound">No Video Player Found</string>
    <string name="NoVideoPlayerFoundDetail">No video player found that can play the QuickTime video files. Please download MX Player or similar to play this video.</string>
    <string name="Notifications">Notifications</string>
    <string name="Ok">Ok</string>
    <string name="OneGroup">1 Group</string>
    <string name="PasteValuesAbove">Paste values above</string>
    <string name="PlanTemplate">Plan Template</string>
    <string name="PlanTemplates">Plan Templates</string>
    <string name="Post">Post</string>
    <string name="Progress">Progress</string>
    <string name="ProgressPhoto">Progress Photo</string>
    <string name="ProgressPhotos">Progress Photos</string>
    <string name="Protein">Protein</string>
    <string name="SHVAddaNewPhoto">Add a New Photo</string>
    <string name="SHVLogWorkout">Log Workout</string>
    <string name="SHVNewPost">New Post</string>
    <string name="Save">Save</string>
    <string name="SaySomethingAboutThis">Say something about this...</string>
    <string name="SeeDetails">See details</string>
    <string name="Servings">Servings</string>
    <string name="SetsOrRounds">Sets/Rounds</string>
    <string name="Share">Share</string>
    <string name="SharePage">Share Page</string>
    <string name="Sites">Sites</string>
    <string name="Snacks">Snacks</string>
    <string name="StartDate">Start Date</string>
    <string name="StartDateNotSet">Not Set</string>
    <string name="Strength">Strength</string>
    <string name="Submit">Submit</string>
    <string name="Target">Target</string>
    <string name="TargetDate">Target Date</string>
    <string name="Templates">Templates</string>
    <string name="Today">Today</string>
    <string name="TotalCalories">Total Calories</string>
    <string name="TrainedBy">Trained By</string>
    <string name="TrainerFuWebAppDetail">You can use TrainerFu on web/desktop. To get started, go to https://app.trainerfu.com on your computer.</string>
    <string name="TrainerFuWebAppTitle">TrainerFu for Web/Desktop</string>
    <string name="Trainers">Trainers</string>
    <string name="Video">Video</string>
    <string name="Warning">Warning</string>
    <string name="WellDone">Well Done! ��</string>
    <string name="WhoCanSeeThis">Who can see this?</string>
    <string name="Workout">Workout</string>
    <string name="Workouts">Workouts</string>
    <string name="Yes">Yes</string>
    <string name="Yesterday">Yesterday</string>
    <string name="You">You</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_chat">Chat</string>
    <string name="action_feed">    Feed    </string>
    <string name="action_log">Log</string>
    <string name="action_logout">Logout</string>
    <string name="action_md_cancel">Cancel</string>
    <string name="action_md_done">Done</string>
    <string name="action_md_edit">Edit before marking as done</string>
    <string name="action_meal_log">Meal</string>
    <string name="action_plan">Plan</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_today">Today</string>
    <string name="action_todays_note">Today\'s note</string>
    <string name="addAssessment">Add %s</string>
    <string name="addCircuit">Add Circuit</string>
    <string name="addCircuitDescription">Group of exercises repeated multiple times</string>
    <string name="addClient">Add Client</string>
    <string name="addClientBtnText">{fa-plus} Add Client</string>
    <string name="addData">{fa-plus} Add Data</string>
    <string name="addExercise">Add Exercise</string>
    <string name="addNote">Add Note</string>
    <string name="addNoteDescription">Workout Description</string>
    <string name="addSuperset">Add Superset</string>
    <string name="addSupersetDescription">Exercises repeated multiple times in a row</string>
    <string name="book_an_appointment">Book An Appointment</string>
    <string name="copyBtn">{fa-files-o} Copy</string>
    <string name="copyWorkoutFromTemplate">Copy workout from a template</string>
    <string name="copyWorkoutFromTemplateDescription">Use one of templates created before</string>
    <string name="deleteOrReorder">Delete or reorder exercises</string>
    <string name="deleteOrReorderDescription">Remove, group and ungroup exercises</string>
    <string name="emailBtn">{fa-envelope-o} Email</string>
    <string name="intercom_allow_access">Allow access</string>
    <string name="intercom_allow_storage_access">Please allow access to storage to see your photos</string>
    <string name="intercom_photo_access_denied">You denied access to your photos</string>
    <string name="launchApp">Launch Your Own Fitness App</string>
    <string name="logout">Logout</string>
    <string name="meal_log">Meal Log</string>
    <string name="meal_logging_faq">Meal Logging FAQ</string>
    <string name="moreBtn">{fa-ellipsis-v} More</string>
    <string name="notes">Notes</string>
    <string name="pasteBtn">{fa-clipboard} Paste</string>
    <string name="saveWorkoutToTemplate">Save this workout to a new template</string>
    <string name="saveWorkoutToTemplateDescription">Create a new template to reuse it later</string>
    <string name="scheduledMessages">Scheduled Messages</string>
    <string name="settings">Settings</string>
    <string name="trackProgress">Track Progress</string>
    <string name="trackThisWorkout">Track this workout for client</string>
    <string name="trackThisWorkoutDescription">Complete exercises if your client missed it</string>
    <string name="trainingPackages">Training Packages &amp; Payment</string>
    <string name="webAppBannerDescription1">Do workout programming at God-speed from the TrainerFu web app.</string>
    <string name="webAppBannerDescription2">To get started, just go to the below link on your computer:</string>
    <string name="webAppBannerTitle">TrainerFu for Web/Desktop</string>
    <string name="workoutTemplates">Workout Templates</string>
</resources>