<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.trainerfu.android.WorkoutOptionsRowView android:id="@+id/add_superset" android:background="@color/white" android:visibility="visible" android:clickable="true" android:layout_width="match_parent" android:layout_height="65dp" app:workoutOptions_detail="@string/addSupersetDescription" app:workoutOptions_icon_resource="@drawable/add_superset_icon" app:workoutOptions_title="@string/addSuperset"/>
    <com.trainerfu.android.WorkoutOptionsRowView android:id="@+id/add_circuit" android:background="@color/white" android:visibility="visible" android:layout_width="match_parent" android:layout_height="65dp" app:workoutOptions_detail="@string/addCircuitDescription" app:workoutOptions_icon_resource="@drawable/add_circuit_icon" app:workoutOptions_title="@string/addCircuit"/>
    <com.trainerfu.android.WorkoutOptionsRowView android:id="@+id/add_note" android:background="@color/white" android:visibility="visible" android:clickable="true" android:layout_width="match_parent" android:layout_height="65dp" android:foreground="?attr/selectableItemBackground" app:workoutOptions_detail="@string/addNoteDescription" app:workoutOptions_icon_resource="@drawable/add_note_icon" app:workoutOptions_title="@string/addNote"/>
    <com.trainerfu.android.WorkoutOptionsRowView android:id="@+id/copy_workout" android:background="@color/white" android:visibility="visible" android:layout_width="match_parent" android:layout_height="65dp" app:workoutOptions_detail="@string/copyWorkoutFromTemplateDescription" app:workoutOptions_icon_resource="@drawable/copy_icon" app:workoutOptions_title="@string/copyWorkoutFromTemplate"/>
    <com.trainerfu.android.WorkoutOptionsRowView android:id="@+id/save_workout" android:background="@color/white" android:visibility="visible" android:layout_width="match_parent" android:layout_height="65dp" app:workoutOptions_detail="@string/saveWorkoutToTemplateDescription" app:workoutOptions_icon_resource="@drawable/save_icon" app:workoutOptions_title="@string/saveWorkoutToTemplate"/>
    <com.trainerfu.android.WorkoutOptionsRowView android:id="@+id/track_workout" android:background="@color/white" android:visibility="visible" android:layout_width="match_parent" android:layout_height="65dp" app:workoutOptions_detail="@string/trackThisWorkoutDescription" app:workoutOptions_icon_resource="@drawable/timer_on_icon" app:workoutOptions_title="@string/trackThisWorkout"/>
    <com.trainerfu.android.WorkoutOptionsRowView android:id="@+id/delete_exercise" android:background="@color/white" android:visibility="visible" android:layout_width="match_parent" android:layout_height="65dp" app:workoutOptions_detail="@string/deleteOrReorderDescription" app:workoutOptions_icon_resource="@drawable/delete_exercise_icon" app:workoutOptions_title="@string/deleteOrReorder"/>
</LinearLayout>
