<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/left_arrow_1" android:id="@+id/left_arrow" android:visible="false" android:title="✓" app:showAsAction="always"/>
    <item android:icon="@drawable/right_arrow_1" android:id="@+id/right_arrow" android:visible="false" android:title="✓" app:showAsAction="always"/>
    <item android:id="@+id/filter_item" android:title="▼" app:showAsAction="always">
        <menu>
            <group android:id="@+id/sub_menu" android:checkableBehavior="single">
                <item android:id="@+id/all" android:title="@string/All" android:checkable="true"/>
                <item android:id="@+id/workouts" android:title="@string/Workouts" android:checkable="true"/>
                <item android:id="@+id/assessments" android:title="@string/Assessments" android:checkable="true"/>
                <item android:id="@+id/meals" android:title="@string/Meals" android:checkable="true"/>
                <item android:id="@+id/progress_photos" android:title="@string/ProgressPhotos" android:checkable="true"/>
                <item android:id="@+id/checkins" android:title="@string/Checkins" android:checkable="true"/>
                <item android:id="@+id/post" android:title="@string/Post" android:checkable="true"/>
            </group>
        </menu>
    </item>
</menu>
