<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="15dp" android:paddingRight="15dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="5">
    <TextView android:textColor="@color/lightBlack" android:ellipsize="end" android:id="@+id/servings_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Servings" android:maxLines="1" android:layout_weight="1"/>
    <TextView android:textColor="@color/lightBlack" android:gravity="center" android:id="@+id/carbs_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Carbs" android:layout_weight="1"/>
    <TextView android:textColor="@color/lightBlack" android:gravity="center" android:id="@+id/protein_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Protein" android:layout_weight="1"/>
    <TextView android:textColor="@color/lightBlack" android:gravity="center" android:id="@+id/fats_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Fats" android:layout_weight="1"/>
    <TextView android:textColor="@color/lightBlack" android:gravity="right" android:id="@+id/calories_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Calories" android:layout_weight="1"/>
</LinearLayout>
