<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="5dp">
    <ScrollView android:id="@+id/scrollview_wrapper" android:background="@color/white" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:background="@color/lightBackground" android:paddingTop="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
            <View android:id="@+id/topDivider" android:background="@color/dividerColor" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1dp"/>
            <com.trainerfu.android.CTAButton android:id="@+id/trackProgressBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="50dp" app:ctabutton_icon_resource="@drawable/track_progress" app:ctabutton_title="@string/trackProgress"/>
            <com.trainerfu.android.CTAButton android:id="@+id/chatBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="50dp" app:ctabutton_icon_resource="@drawable/chat_with_coach" app:ctabutton_title="@string/Chat"/>
            <com.trainerfu.android.CTAButton android:id="@+id/notesBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="50dp" app:ctabutton_icon_resource="@drawable/plan_template_icon" app:ctabutton_title="@string/notes"/>
            <com.trainerfu.android.CTAButton android:id="@+id/habitBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="50dp" app:ctabutton_icon_resource="@drawable/habit_icon" app:ctabutton_title="Habits"/>
            <com.trainerfu.android.CTAButton android:id="@+id/scheduledMessagesBtnClient" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="50dp" app:ctabutton_icon_resource="@drawable/schedule_message_icon" app:ctabutton_title="@string/scheduledMessages"/>
            <com.trainerfu.android.CTAButton android:id="@+id/mealLogginFaqBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="50dp" app:ctabutton_icon_resource="@drawable/meal_log" app:ctabutton_title="@string/meal_logging_faq"/>
            <com.trainerfu.android.CTAButton android:id="@+id/bookApptBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="70dp" app:ctabutton_detail="Book appointment with a trainer" app:ctabutton_icon_resource="@drawable/book_an_appointment" app:ctabutton_title="@string/book_an_appointment"/>
            <com.trainerfu.android.CTAButton android:id="@+id/mealLogBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="70dp" app:ctabutton_detail="Share your meal log with a trainer" app:ctabutton_icon_resource="@drawable/meal_log" app:ctabutton_title="@string/meal_log"/>
            <com.trainerfu.android.CTAButton android:id="@+id/premiumBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="70dp" app:ctabutton_detail="Expiring on --" app:ctabutton_icon_resource="@drawable/meal_log" app:ctabutton_title="Extend Premium"/>
            <com.trainerfu.android.CTAButton android:id="@+id/workoutTemplatesBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp" app:ctabutton_icon_resource="@drawable/workout_template_icon" app:ctabutton_title="@string/workoutTemplates"/>
            <com.trainerfu.android.CTAButton android:id="@+id/planTemplatesBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp" app:ctabutton_icon_resource="@drawable/plan_template_icon" app:ctabutton_title="@string/PlanTemplates"/>
            <com.trainerfu.android.CTAButton android:id="@+id/exercisesBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp" app:ctabutton_icon_resource="@drawable/log_freestyle_workout" app:ctabutton_title="@string/Exercises"/>
            <com.trainerfu.android.CTAButton android:id="@+id/groupsBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp" app:ctabutton_icon_resource="@drawable/groups_icon" app:ctabutton_title="@string/Groups"/>
            <com.trainerfu.android.CTAButton android:id="@+id/pricingBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp" app:ctabutton_icon_resource="@drawable/workout_from_plan" app:ctabutton_title="Subscription Plans"/>
            <com.trainerfu.android.CTAButton android:id="@+id/trainingPackageBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp" app:ctabutton_icon_resource="@drawable/training_packages_icon" app:ctabutton_title="@string/trainingPackages"/>
            <com.trainerfu.android.CTAButton android:id="@+id/trainersBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp" app:ctabutton_icon_resource="@drawable/trainers_icon" app:ctabutton_title="@string/Trainers"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/separator" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <View android:background="@color/dividerColor" android:layout_width="match_parent" android:layout_height="1dp"/>
                <View android:background="@color/lightBackground" android:layout_width="match_parent" android:layout_height="20dp"/>
                <View android:background="@color/dividerColor" android:layout_width="match_parent" android:layout_height="1dp"/>
            </LinearLayout>
            <com.trainerfu.android.CTAButton android:id="@+id/launchAppBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp" app:ctabutton_icon_resource="@drawable/launch_own_app_icon" app:ctabutton_title="@string/launchApp"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/separator3" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <View android:background="@color/dividerColor" android:layout_width="match_parent" android:layout_height="1dp"/>
                <View android:background="@color/lightBackground" android:layout_width="match_parent" android:layout_height="20dp"/>
                <View android:background="@color/dividerColor" android:layout_width="match_parent" android:layout_height="1dp"/>
            </LinearLayout>
            <ListView android:id="@+id/app_links_list" android:background="@color/white" android:visibility="gone" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content" android:cacheColorHint="#00000000" android:divider="@null" android:dividerHeight="0dp" android:footerDividersEnabled="false"/>
            <com.trainerfu.android.CTAButton android:id="@+id/settingsBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="70dp" app:ctabutton_detail="Change your photo, name, etc" app:ctabutton_icon_resource="@drawable/settings_icon" app:ctabutton_title="@string/settings"/>
            <com.trainerfu.android.CTAButton android:id="@+id/learnBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp" app:ctabutton_icon_resource="@drawable/learn" app:ctabutton_title="Learn"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/separator2" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <View android:background="@color/dividerColor" android:layout_width="match_parent" android:layout_height="1dp"/>
                <View android:background="@color/lightBackground" android:layout_width="match_parent" android:layout_height="20dp"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/logout_view" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="55dp">
                <View android:background="@color/dividerColor" android:layout_width="match_parent" android:layout_height="1dp"/>
                <TextView android:textColor="#f6564a" android:gravity="center" android:layout_width="match_parent" android:layout_height="0dp" android:text="@string/logout" android:layout_weight="1"/>
            </LinearLayout>
            <com.trainerfu.android.CTAButton android:id="@+id/logoutBtn" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="70dp" app:ctabutton_detail="Logout from this app" app:ctabutton_icon_resource="@drawable/logout" app:ctabutton_title="@string/logout"/>
            <View android:id="@+id/bottomDivider" android:background="@color/dividerColor" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
