<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:paddingTop="5dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal" android:id="@+id/toolbar" android:background="@drawable/week_view_sub_view_background" android:padding="1dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.joanzapata.iconify.widget.IconTextView android:textSize="16sp" android:textColor="@color/tintColor" android:gravity="center" android:id="@+id/emailPlanBtn" android:background="#ffffff" android:clickable="true" android:layout_width="0dp" android:layout_height="44dp" android:text="@string/emailBtn" android:layout_weight="1"/>
        <include layout="@layout/vertical_divider"/>
        <com.joanzapata.iconify.widget.IconTextView android:textSize="16sp" android:textColor="@color/tintColor" android:gravity="center" android:id="@+id/copyPlanBtn" android:background="#ffffff" android:clickable="true" android:layout_width="0dp" android:layout_height="44dp" android:text="@string/copyBtn" android:layout_weight="1"/>
        <include layout="@layout/vertical_divider"/>
        <com.joanzapata.iconify.widget.IconTextView android:textSize="16sp" android:textColor="@color/tintColor" android:gravity="center" android:id="@+id/pastePlanBtn" android:background="#ffffff" android:clickable="true" android:layout_width="0dp" android:layout_height="44dp" android:text="@string/pasteBtn" android:layout_weight="1"/>
        <View android:id="@+id/pasteBtnDivider" android:background="@color/black75PercentColor" android:visibility="gone" android:layout_width="1dp" android:layout_height="match_parent"/>
        <com.joanzapata.iconify.widget.IconTextView android:textSize="16sp" android:textColor="@color/tintColor" android:gravity="center" android:id="@+id/moreBtn" android:background="#ffffff" android:visibility="gone" android:clickable="true" android:layout_width="0dp" android:layout_height="44dp" android:text="@string/moreBtn" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/webAppBanner" android:background="@color/waveColor" android:padding="10dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="-60dp" android:layout_marginBottom="10dp">
        <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/webAppBannerTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/webAppBannerTitle"/>
        <TextView android:textSize="16sp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/webAppBannerDescription1"/>
        <TextView android:textSize="16sp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/webAppBannerDescription2"/>
        <com.joanzapata.iconify.widget.IconTextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black25PercentColor" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/webAppBannerLink" android:background="@color/white" android:clickable="true" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginTop="10dp" android:text="https://app.trainerfu.com"/>
    </LinearLayout>
</LinearLayout>
